# ductt-demo

./: .gitignore  Dockerfile  k8s-deployment.yaml
agent/: .gitignore  SYSTEM_OVERVIEW.md  agent.py
agent/airflow_bot/: .env.example  .gitignore  README.md  SETUP.md  __main__.py  a2a_executor.py  agent.py  get_token.py  pyproject.toml
agent/airflow_bot/airflow_bot/: __init__.py
agent/airflow_bot/airflow_bot/.adk/: session.db
agent/airflow_bot/tools/.adk/: session.db
agent/awareness_agent/: README.md  __main__.py  agent.py  db_utils.py  docker-compose.yml  init_db.sql  requirements.txt  user_awareness_status.json
agent/devops_coordinator/: agent.py
agent/devops_root/: __main__.py  agent.py
agent/kubernetes_bot/: __main__.py  agent.py  pyproject.toml
agent/kubernetes_bot/.adk/: session.db
agent/kubernetes_bot/kubernetes_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent/kubernetes_bot/tools/: tools.py
agent/kubernetes_bot/tools/.adk/: session.db
agent/library_agent/: __main__.py  agent.py  requirements.txt  vector_db.py  view_vector_db.py
agent/library_agent/.chroma_db/: chroma.sqlite3
agent/library_agent/documents/: AI_and_Automated_Decision_Making_Policy.txt  Human_Resources_Employee_Handbook.txt  Information_Security_Policy.txt  training_catalog.txt  training_rules.txt  📄 Human Resources Employee Handbook.docx  📄 Information Security Policy.docx
agent/secure_devops_bot/: agent.py  rules.py
agent/templates/: index.html
agent_old/: airflow_client.py  app.py  requirements.txt  telegram_bot.py
agent_old/templates/: .refresh
dags/: example_failure_dag.py  ml_model_downstream_dag.py  ml_pipeline_dag.py  prometheus_metrics_dag.py  sale_analytics.py
dags/ml_pipeline_tasks/: __init__.py  data.py  model.py  utils.py
data/: processed_training_data.csv  training_data.csv
docs/: a2a-architecture-diagram.md
jenkins/: Jenkinsfile  Jenkinsfile.airflow
mcp/mcp-server-apache-airflow/: start-mcp.bat  start-mcp.ps1  start-server.ps1  start.bat
mcp/mcp-server-apache-airflow/src/: envs.py
mcp/mcp-server-apache-airflow/src/airflow/: airflow_client.py
models/: model_latest.pkl
posthog/: demo.html  main.py
posthog/advanced-demo/: README.md  package-lock.json  package.json
posthog/advanced-demo/app/: layout.tsx  page.tsx  providers.tsx
posthog/advanced-demo/app/cart/: page.tsx
posthog/advanced-demo/app/checkout/: page.tsx
posthog/advanced-demo/app/dashboard/: page.tsx
posthog/advanced-demo/app/login/: page.tsx
posthog/advanced-demo/app/products/: page.tsx
posthog/advanced-demo/app/products/[id]/: page.tsx
posthog/advanced-demo/app/signup/: page.tsx
posthog/product-analytics/: DEBUG.md  GITHUB_REFERENCES.md  QUICK_FIX.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json
posthog/product-analytics/app/: layout.tsx  page.tsx  providers.tsx
posthog/product-analytics/app/dashboard/: page.tsx
posthog/product-analytics/app/signup/: page.tsx
posthog/session-replay/: README.md  index.html
posthog/stagehand-demo/: package-lock.json  package.json  shophub-test-report.txt  shophub-test.ts  tsconfig.json
prometheus/: README.md  app.py  prometheus-agent-values.yaml  pushgateway-servicemonitor.yaml
prometheus/manifests/nats/: nats-podmonitor-remote.yaml  nats-podmonitor.yaml  nats-values.yaml
samples/adk-samples/: .flake8  .gitignore  README.md  pyproject.toml
samples/adk-samples/.github/: CODEOWNERS  dependabot.yml
samples/adk-samples/.github/terraform/: main.tf
samples/adk-samples/.github/workflows/: dependabot-auto-merge.yml  gemini-issue-automated-triage.yml  gemini-pr-review.yml  test_templated_agent.yaml
samples/adk-samples/go/agents/llm-auditor/: README.md
samples/adk-samples/go/agents/llm-auditor/auditor/: auditor.go  auditor_test.go
samples/adk-samples/python/: README.md  python-checks.sh
samples/adk-samples/python/agents/: README.md
samples/adk-samples/python/agents/RAG/: .env.example  pyproject.toml
samples/adk-samples/python/agents/bidi-demo/: README.md  pyproject.toml
samples/adk-samples/python/agents/blog-writer/: requirements.txt
samples/adk-samples/python/agents/hierarchical-workflow-automation/: README.md  deploy_agent.py  requirements.txt  setup.sh
samples/adk-samples/python/agents/parallel_task_decomposition_execution/: pyproject.toml
samples/adk-samples/python/agents/parallel_task_decomposition_execution/parallel_task_decomposition_agent/: agent.py  config.py  tools.py
samples/adk-samples/python/agents/product-catalog-ad-generation/: agent_engine_deploy.py  requirements.txt
samples/adk-samples/python/agents/tau2-benchmark-agent/: README.md  pyproject.toml
samples/adk-samples/python/agents/tau2-benchmark-agent/tau2_agent/: adk_agent.py
samples/adk-samples/python/agents/tau2-benchmark-agent/tests/: conftest.py  test_adk_agent.py
samples/adk-samples/python/agents/travel-concierge/: .env.example  pyproject.toml
samples/adk-samples/python/agents/travel-concierge/eval/: arize_eval_templates.py  test_eval_arize.py
samples/adk-samples/python/agents/travel-concierge/travel_concierge/: agent.py  tracing.py
samples/adk-samples/python/notebooks/evaluation/: evaluation_criteria_in_adk.ipynb  user_simulation_in_adk_evals.ipynb
setup/: DETAILED_MIGRATION_GUIDE.md  MIGRATION_GUIDE.md  jenkins-values.yaml  letsencrypt-production.yaml  rbac.yaml
(+91 files in other folders)
