[project]
name = "airflow-bot"
version = "0.1.0"
description = "Apache Airflow management agent using ADK and MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "airflow-mcp-server>=0.9.1",
    "google-adk==1.13.0",
    "google-genai>=1.17.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.24.1",
]
